Kubernetes-Manifests-file/frontend/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: frontend
  namespace: frontend
spec:
  ports:
  - port: 5000
    protocol: TCP
  type: ClusterIP
  selector:
    role: frontend
